# AE-Task-Manager

./: .gitignore  Cargo.toml  Session.vim
resources/: AuthFrame.glade  AuthFrame.glade~  HomeFrame.glade  resources.xml  style.css
src/: main.rs  root.rs
src/app/: databases.rs  forms.rs  mod.rs  models.rs  root.rs  services.rs
src/app/services/: mod.rs  user.rs
src/auth/: mod.rs
src/core/: view.rs
src/prelude/: mod.rs
src/ui/: Frame.rs  application.rs  frame.rs  mod.rs
