[package]
name = "task-manager"
version = "0.1.0"
edition = "2018"
authors = ["Iaroslav Sorokin <iaroslav.sorokin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14.1" }
gio = ">=0.14.5"
glib = ">=0.14.5"
sqlite = ">=0.26.0"
nanoid = ">=0.4.0"
sha2 = ">=0.9.6"
pango = ">=0.14.3"
